--- a/index.html
+++ b/index.html
@@ -9,6 +9,192 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
+  <div class="container">
+    <section class="header-wrp padding-side bg-dark">
+      <div class="header-cnt">
+        <h3>Product name</h3>
+        <ul class="header-cnt-list">
+          <li class="header-cnt-list-item">Put on this page information about your product</li>
+          <li class="header-cnt-list-item">A detailed description of product</li>
+          <li class="header-cnt-list-item">Tell us about the advantages and merits</li>
+          <li class="header-cnt-list-item">Associate the page with the payment system</li>
+        </ul>
+      </div>
+      <div class="header-img-wrp">
+        <img class="header-img" src="/img/shape_9_345.jpg" alt="">
+      </div>
+    </section>
+    <main class="main-wrp">
+      <div class="about-wrp padding-side ">
+        <div class="style-text-middle">
+          <h3 class="cnt-title about-cnt-title">About your product</h3>
+          <p class="about-cnt-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
+          <p class="about-cnt-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+        </div>
+        <img src="/img/video_14.jpg" alt="">
+      </div>
+      <div class="plus-wrp padding-side lane ">
+        <h3 class="cnt-title">Dignity and pluses product</h3>
+        <div class="plus-list style-text-middle">
+          <div class="plus-item">
+            <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+          </div>
+          <div class="plus-item">
+            <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+          </div>
+          <div class="plus-item">
+            <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+          </div>
+          <div class="plus-item">
+            <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+          </div>
+        </div>
+      </div>
+      <div class="screenshot-wrp padding-side">
+        <h3 class="cnt-title">Screenshots</h3>
+        <div class="screenshot-list style-text-middle">
+          <div class="screenshot-item">
+            <img src="/img/image_138.jpg" alt="">
+            <div>
+              <h5>The description for the image</h5>
+              <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+            </div>
+          </div>
+          <div class="screenshot-item">
+            <img src="/img/image_138.jpg" alt="">
+            <div>
+              <h5>The description for the image</h5>
+              <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+            </div>
+          </div>
+          <div class="screenshot-item">
+            <img src="/img/image_138.jpg" alt="">
+            <div>
+              <h5>The description for the image</h5>
+              <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+            </div>
+          </div>
+          <div class="screenshot-item">
+            <img src="/img/image_138.jpg" alt="">
+            <div>
+              <h5>The description for the image</h5>
+              <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="review-wrp padding-side lane">
+        <h3 class="cnt-title">Reviews</h3>
+        <div class="review-list">
+          <div class="review-item">
+            <img src="/img/userpic_176.png" alt="">
+            <div class="review-item-text-wrp">
+              <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+              <p class="review-item-subtext">Lourens S.</p>
+            </div>
+          </div>
+          <div class="review-item">
+            <img src="/img/userpic_176.png" alt="">
+            <div class="review-item-text-wrp">
+              <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+              <p class="review-item-subtext">Lourens S.</p>
+            </div>
+          </div>
+          <div class="review-item">
+            <img src="/img/userpic_176.png" alt="">
+            <div class="review-item-text-wrp">
+              <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+              <p class="review-item-subtext">Lourens S.</p>
+            </div>
+          </div>
+          <div class="review-item">
+            <img src="/img/userpic_176.png" alt="">
+            <div class="review-item-text-wrp">
+              <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
+              <p class="review-item-subtext">Lourens S.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="buy-wrp padding-side">
+        <h3 class="cnt-title">Buy it now</h3>
+        <div class="buy-list">
+          <div class="buy-item">
+            <h5 class="buy-title">Standart</h5>
+            <p class="buy-price">$100</p>
+            <p class="buy-text">1. Porro officia cumque sint deleniti;
+              2. Тemo facere rem vitae odit;
+              3. Cum odio, iste quia doloribus autem;
+              4. Aperiam nulla ea neque.</p>
+            <a class="buy-button" href="#">Buy</a>
+          </div>
+          <div class="buy-item">
+            <h5 class="buy-title">Premium</h5>
+            <p class="buy-price">$150</p>
+            <p class="buy-text">1. Porro officia cumque sint deleniti;
+              2. Тemo facere rem vitae odit;
+              3. Cum odio, iste quia doloribus autem;
+              4. Aperiam nulla ea neque.
+              5. Porro officia cumque sint deleniti;
+              6. Тemo facere rem vitae odit;
+              7. Cum odio, iste quia doloribus autem;
+              8. Aperiam nulla ea neque.</p>
+            <a class="buy-button" href="#">Buy</a>
+          </div>
+          <div class="buy-item">
+            <h5 class="buy-title">Lux</h5>
+            <p class="buy-price">$200</p>
+            <p class="buy-text">1. Porro officia cumque sint deleniti;
+              2. Тemo facere rem vitae odit;
+              3. Cum odio, iste quia doloribus autem;
+              4. Aperiam nulla ea neque.
+              5. Porro officia cumque sint deleniti;
+              6. Тemo facere rem vitae odit;
+              7. Cum odio, iste quia doloribus autem;
+              8. Aperiam nulla ea neque.
+              9. Porro officia cumque sint deleniti;
+              10. Тemo facere rem vitae odit;
+              11. Cum odio, iste quia doloribus autem;
+              12. Aperiam nulla ea neque.</p>
+            <a class="buy-button" href="#">Buy</a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer-wrp">
+      <div class="footer-contact-wrp bg-dark padding-side">
+        <h3 class="contact-title">Contacts</h3>
+        <div class="contact-wrp">
+          <form class="contact-form" action="#">
+            <input type="text" placeholder="Your name:">
+            <input type="email" placeholder="Your email:">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your message:"></textarea>
+            <input class="form-submit" type="submit" value="SEND">
+          </form>
+          <ol class="social-list">
+            <li class="social-item">
+              <img src=" /img/skype_icon_319.png" alt="">
+              <p>here_your_login_skype</p>
+            </li>
+            <li class="social-item">
+              <img src="/img/icq_icon_324.png" alt="">
+              <p>279679659</p>
+            </li>
+            <li class="social-item">
+              <img src="/img/email_icon_332.png" alt="">
+              <p>psdhtmlcss@mail.ru</p>
+            </li>
+            <li class="social-item">
+              <img src="/img/phone_icon_337.png" alt="">
+              <p>80 00 4568 55 55</p>
+            </li>
+          </ol>
+        </div>
+      </div>
+      <div class="footer-copy-wrp">
+        <p>Copyright &copy; 2014 Product name &middot; PSD HTML CSS</p>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
