--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <form class="contact-form" action="#">
             <input type="text" placeholder="Your name:">
             <input type="email" placeholder="Your email:">
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your message:"></textarea>
+            <textarea name="message" id="msg" cols="30" rows="10" placeholder="Your message:"></textarea>
             <input class="form-submit" type="submit" value="SEND">
           </form>
           <ol class="social-list">
