added pre-css stylus and img background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Simple</title>
   <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/stylus.css">
 </head>
 <body>
   <div class="container">
@@ -25,7 +25,7 @@
       </div>
     </section>
     <main class="main-wrp">
-      <div class="about-wrp padding-side ">
+      <div class="about-wrp padding-side bg-white">
         <div class="style-text-middle">
           <h3 class="cnt-title about-cnt-title">About your product</h3>
           <p class="about-cnt-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
@@ -33,7 +33,7 @@
         </div>
         <img src="/img/video_14.jpg" alt="">
       </div>
-      <div class="plus-wrp padding-side lane ">
+      <div class="plus-wrp padding-side lane">
         <h3 class="cnt-title">Dignity and pluses product</h3>
         <div class="plus-list style-text-middle">
           <div class="plus-item">
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-      <div class="screenshot-wrp padding-side">
+      <div class="screenshot-wrp padding-side bg-white">
         <h3 class="cnt-title">Screenshots</h3>
         <div class="screenshot-list style-text-middle">
           <div class="screenshot-item">
@@ -116,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="buy-wrp padding-side">
+      <div class="buy-wrp padding-side bg-white">
         <h3 class="cnt-title">Buy it now</h3>
         <div class="buy-list">
           <div class="buy-item">
