completed split stylus

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </div>
     </main>
     <footer class="footer-wrp">
-      <div class="footer-contact-wrp bg-dark padding-side">
+      <div class="bg-dark padding-side">
         <h3 class="contact-title">Contacts</h3>
         <div class="contact-wrp">
           <form class="contact-form" action="#">
