Fix size imgs and remove in path "\".

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Simple</title>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/stylus.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/stylus.css">
 </head>
 <body>
   <div class="container">
     <section class="header-wrp padding-side bg-dark">
       <div class="header-cnt">
-        <h3>Product name</h3>
+        <h3 class="header-cnt-title">Product name</h3>
         <ul class="header-cnt-list">
           <li class="header-cnt-list-item">Put on this page information about your product</li>
           <li class="header-cnt-list-item">A detailed description of product</li>
@@ -21,7 +21,7 @@
         </ul>
       </div>
       <div class="header-img-wrp">
-        <img class="header-img" src="/img/shape_9_345.jpg" alt="">
+        <img class="header-img" src="/img/shape_9_345.jpg" width="470" height="215" alt="">
       </div>
     </section>
     <main class="main-wrp">
@@ -31,7 +31,7 @@
           <p class="about-cnt-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
           <p class="about-cnt-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
         </div>
-        <img src="/img/video_14.jpg" alt="">
+        <img src="/img/video_14.jpg" alt="" widht="430" height="245">
       </div>
       <div class="plus-wrp padding-side lane">
         <h3 class="cnt-title">Dignity and pluses product</h3>
@@ -54,28 +54,28 @@
         <h3 class="cnt-title">Screenshots</h3>
         <div class="screenshot-list style-text-middle">
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="">
+            <img src="/img/image_138.jpg" alt="" width="200" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
           </div>
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="">
+            <img src="/img/image_138.jpg" alt="" width="200" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
           </div>
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="">
+            <img src="/img/image_138.jpg" alt="" width="200" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
           </div>
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="">
+            <img src="/img/image_138.jpg" alt="" width="200" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
@@ -87,28 +87,28 @@
         <h3 class="cnt-title">Reviews</h3>
         <div class="review-list">
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="">
+            <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <p class="review-item-subtext">Lourens S.</p>
             </div>
           </div>
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="">
+            <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <p class="review-item-subtext">Lourens S.</p>
             </div>
           </div>
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="">
+            <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <p class="review-item-subtext">Lourens S.</p>
             </div>
           </div>
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="">
+            <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <p class="review-item-subtext">Lourens S.</p>
