remove duplucate .cnt-title

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="main-wrp">
       <div class="about-wrp padding-side bg-white">
         <div class="style-text-middle">
-          <h3 class="cnt-title about-cnt-title">About your product</h3>
+          <h3 class="about-cnt-title">About your product</h3>
           <p class="about-cnt-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
           <p class="about-cnt-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
         </div>
