Added 2 elements in block - Dignity and pluses product

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
           <div class="plus-item">
             <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
           </div>
+          <div class="plus-item">
+            <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+          </div>
+          <div class="plus-item">
+            <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
+          </div>
         </div>
       </div>
       <div class="screenshot-wrp padding-side bg-white">
