Replace div to ul\li

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
       </div>
       <div class="plus-wrp padding-side lane">
         <h3 class="cnt-title">Dignity and pluses product</h3>
-        <div class="plus-list style-text-middle">
-          <div class="plus-item">
+        <ul class="plus-list style-text-middle">
+          <li class="plus-item">
             <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-          </div>
-          <div class="plus-item">
+          </li>
+          <li class="plus-item">
             <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-          </div>
-          <div class="plus-item">
+          </li>
+          <li class="plus-item">
             <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-          </div>
-          <div class="plus-item">
+          </li>
+          <li class="plus-item">
             <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-          </div>
-          <div class="plus-item">
+          </li>
+          <li class="plus-item">
             <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-          </div>
-          <div class="plus-item">
+          </li>
+          <li class="plus-item">
             <p>Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
       <div class="screenshot-wrp padding-side bg-white">
         <h3 class="cnt-title">Screenshots</h3>
