Reworked block Buy. Replace price with p to span. Replace list to ol/li

--- a/index.html
+++ b/index.html
@@ -125,41 +125,47 @@
         <div class="buy-list">
           <div class="buy-item">
             <h5 class="buy-title">Standart</h5>
-            <p class="buy-price">$100</p>
-            <p class="buy-text">1. Porro officia cumque sint deleniti;
-              2. Тemo facere rem vitae odit;
-              3. Cum odio, iste quia doloribus autem;
-              4. Aperiam nulla ea neque.</p>
+            <span class="buy-price">$100</span>
+            <ol class="buy-text">
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+            </ol>
             <a class="buy-button" href="#">Buy</a>
           </div>
           <div class="buy-item">
             <h5 class="buy-title">Premium</h5>
-            <p class="buy-price">$150</p>
-            <p class="buy-text">1. Porro officia cumque sint deleniti;
-              2. Тemo facere rem vitae odit;
-              3. Cum odio, iste quia doloribus autem;
-              4. Aperiam nulla ea neque.
-              5. Porro officia cumque sint deleniti;
-              6. Тemo facere rem vitae odit;
-              7. Cum odio, iste quia doloribus autem;
-              8. Aperiam nulla ea neque.</p>
+            <span class="buy-price">$150</span>
+            <ol class="buy-text">
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+            </ol>
             <a class="buy-button" href="#">Buy</a>
           </div>
           <div class="buy-item">
             <h5 class="buy-title">Lux</h5>
-            <p class="buy-price">$200</p>
-            <p class="buy-text">1. Porro officia cumque sint deleniti;
-              2. Тemo facere rem vitae odit;
-              3. Cum odio, iste quia doloribus autem;
-              4. Aperiam nulla ea neque.
-              5. Porro officia cumque sint deleniti;
-              6. Тemo facere rem vitae odit;
-              7. Cum odio, iste quia doloribus autem;
-              8. Aperiam nulla ea neque.
-              9. Porro officia cumque sint deleniti;
-              10. Тemo facere rem vitae odit;
-              11. Cum odio, iste quia doloribus autem;
-              12. Aperiam nulla ea neque.</p>
+            <span class="buy-price">$200</span>
+            <ol class="buy-text">
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+              <li>Porro officia cumque sint deleniti;</li>
+              <li>Тemo facere rem vitae odit;</li>
+              <li>Cum odio, iste quia doloribus autem;</li>
+              <li>Aperiam nulla ea neque.</li>
+            </ol>
             <a class="buy-button" href="#">Buy</a>
           </div>
         </div>
