Rename .lane to .bg-grey. Move .bg-grey in stylus.styl

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <img src="/img/video_14.jpg" alt="" widht="430" height="245">
       </div>
-      <div class="plus-wrp padding-side lane">
+      <div class="plus-wrp padding-side bg-grey">
         <h3 class="cnt-title">Dignity and pluses product</h3>
         <ul class="plus-list style-text-middle">
           <li class="plus-item">
@@ -87,7 +87,7 @@
           </div>
         </div>
       </div>
-      <div class="review-wrp padding-side lane">
+      <div class="review-wrp padding-side bg-grey">
         <h3 class="cnt-title">Reviews</h3>
         <div class="review-list">
           <div class="review-item">
