--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
             <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-              <p class="review-item-subtext">Lourens S.</p>
+              <a class="review-item-subtext">Lourens S.</a>
             </div>
           </div>
           <div class="review-item">
             <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-              <p class="review-item-subtext">Lourens S.</p>
+              <a class="review-item-subtext">Lourens S.</a>
             </div>
           </div>
           <div class="review-item">
             <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-              <p class="review-item-subtext">Lourens S.</p>
+              <a class="review-item-subtext">Lourens S.</a>
             </div>
           </div>
           <div class="review-item">
             <img src="/img/userpic_176.png" alt="" widht="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
-              <p class="review-item-subtext">Lourens S.</p>
+              <a class="review-item-subtext">Lourens S.</a>
             </div>
           </div>
         </div>
