Fixed after html valid

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
           <li class="header-cnt-list-item">Associate the page with the payment system</li>
         </ul>
       </div>
-      <img class="header-img" src="/img/shape_9_345.jpg" width="470" height="215" alt="">
+      <img class="header-img" src="/img/shape_9_345.jpg" height="215" alt="">
     </section>
     <main class="main-wrp">
       <div class="about-wrp padding-side bg-white">
@@ -29,7 +29,7 @@
           <p class="about-cnt-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
           <p class="about-cnt-text">Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
         </div>
-        <img src="/img/video_14.jpg" alt="" widht="430" height="245">
+        <img src="/img/video_14.jpg" alt="" height="245">
       </div>
       <div class="plus-wrp padding-side bg-grey">
         <h3 class="cnt-title">Dignity and pluses product</h3>
@@ -58,28 +58,28 @@
         <h3 class="cnt-title">Screenshots</h3>
         <div class="screenshot-list style-text-middle">
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="" width="200" height="150">
+            <img src="/img/image_138.jpg" alt="" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
           </div>
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="" width="200" height="150">
+            <img src="/img/image_138.jpg" alt="" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
           </div>
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="" width="200" height="150">
+            <img src="/img/image_138.jpg" alt="" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
           </div>
           <div class="screenshot-item">
-            <img src="/img/image_138.jpg" alt="" width="200" height="150">
+            <img src="/img/image_138.jpg" alt="" height="150">
             <div>
               <h5>The description for the image</h5>
               <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
@@ -91,28 +91,28 @@
         <h3 class="cnt-title">Reviews</h3>
         <div class="review-list">
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="" widht="75">
+            <img src="/img/userpic_176.png" alt="" height="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
             </div>
           </div>
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="" widht="75">
+            <img src="/img/userpic_176.png" alt="" height="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
             </div>
           </div>
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="" widht="75">
+            <img src="/img/userpic_176.png" alt="" height="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
             </div>
           </div>
           <div class="review-item">
-            <img src="/img/userpic_176.png" alt="" widht="75">
+            <img src="/img/userpic_176.png" alt="" height="75">
             <div class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
