Reworking social icon. Replace to span. Using with fontawesome

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Simple</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/stylus.css">
+  <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
   <div class="container">
@@ -181,24 +182,29 @@
             <textarea name="message" id="msg" cols="30" rows="10" placeholder="Your message:"></textarea>
             <input class="form-submit" type="submit" value="SEND">
           </form>
-          <ol class="social-list">
-            <li class="social-item">
-              <img src=" img/skype_icon_319.png" alt="">
-              <p>here_your_login_skype</p>
-            </li>
-            <li class="social-item">
-              <img src="img/icq_icon_324.png" alt="">
-              <p>279679659</p>
-            </li>
-            <li class="social-item">
-              <img src="img/email_icon_332.png" alt="">
-              <p>psdhtmlcss@mail.ru</p>
-            </li>
-            <li class="social-item">
-              <img src="img/phone_icon_337.png" alt="">
-              <p>80 00 4568 55 55</p>
-            </li>
-          </ol>
+          <div class="social-wrp">
+            <span class="social-link">here_your_login_skype</span>
+            <span class="social-link">279679659</span>
+            <span class="social-link">psdhtmlcss@mail.ru</span>
+            <span class="social-link">80 00 4568 55 55</span>
+            <div class="social-list">
+              <a href="#" class="social-item">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="social-item">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#" class="social-item">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="#" class="social-item">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#" class="social-item">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer-copy-wrp">
