--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <input type="text" placeholder="Your name:">
             <input type="email" placeholder="Your email:">
             <textarea name="message" id="msg" cols="30" rows="10" placeholder="Your message:"></textarea>
-            <input class="form-submit" type="submit" value="SEND">
+            <input class="form-submit" type="submit" value="send">
           </form>
           <div class="social-wrp">
             <span class="social-link">here_your_login_skype</span>
